--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.LoginActivity">
+        <activity
+            android:name=".ui.LoginActivity"
+            android:theme="@style/OrdinaryTheme">
+        </activity>
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:theme="@style/OrdinaryTheme"
+            >
+        </activity>
+        <activity android:name=".ui.PersonDetailsActivity">
         </activity>
     </application>
 
