--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,16 +25,19 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.githang:status-bar-compat:0.3'
     compile 'com.android.support:support-v4:24.2.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.lcodecorex:tkrefreshlayout:1.0.7'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'commons-codec:commons-codec:20041127.091804'
+    compile 'org.greenrobot:eventbus:3.0.0'
 
-
+    testCompile 'junit:junit:4.12'
 }
